# OpenGL_Practice

./: CMakeLists.txt  LICENSE
include/: special_function.hpp  special_functions.h
src/: main.cpp  special_function.cpp
